ttf font imorting, basic (inefficient) sprite batch system (text and lines)

--- a/AssetImporter/README
+++ b/AssetImporter/README
@@ -1,2 +1,5 @@
-This requires Assimp (http://www.assimp.org/index.php/downloads) and DirectXTex (https://github.com/Microsoft/DirectXTex/wiki/DirectXTex), as well as zlib
-zlib can be installed via NuGet: Install-Package zlib-msvc14-x64
+Dependencies:
+Assimp http://www.assimp.org/index.php/downloads installed to ASSIMP_HOME
+DirectXTex https://github.com/Microsoft/DirectXTex/wiki/DirectXTex installed to DIRECTXTEX_HOME
+zlib - can be installed via NuGet: Install-Package zlib-msvc14-x64
+freetype https://github.com/ubawurinna/freetype-windows-binaries installed to FREETYPE_HOME
